Quick fix for desktop chrome flicker when maximized.

--- a/app/app.css
+++ b/app/app.css
@@ -21,7 +21,7 @@
 .footer {
     width: 100%;
     font-family: monospace;
-    height: 20px;
+    height: 40px;
     overflow: hidden;
     font-size: large;
     text-align: center;
